# BigDL-2.x

./: .gitignore  .gitmodules  .readthedocs.yml  FloatInferenceModel.scala  ImageFeatureSpec.scala  MigrationGuidance.md  NNImageTransformerSpec.scala  README.md  TFTrainingHelper.scala  TorchCriterion.scala  TorchNet.scala  config.yaml  deploy_googlenet_places365.prototxt  fashion_mnist_bigdl.ipynb  fashion_mnist_pytorch_distributed.ipynb  make-dist.sh  nn_transformers.py  pom.xml  python_callback_demo.ipynb  run.sh  test_nn_image_transformer.py  test_nn_transformer.py  test_tf.py  test_torch_net.py  test_utils_onnx.py  zoo-parent.ipr
.github/: CONTRIBUTING.md
DLFeature/: pom.xml
ImageTransferLearning/: ImageTransferLearningExample.py
analytics-zoo-ppml/: ppml-conf.yaml
apps/: ipynb2py-mac.sh  recommendation-ncf-orca-tf.ipynb  run-app-tests-pip.sh  run-app-tests-pytorch-pip.sh  run-app-tests-pytorch.sh  run-app-tests.sh  run-app-tests_pip.sh  run-ray-app-test-pip.sh  run-scala-app-test.sh
assembly/: python-zip.xml
doc/: requirements-doc.txt
docker/: Dockerfile  Dockerfile.save  README.md  install-python.sh
docs/: gen_site.py  mkdocs.yml
finetune/: README.md  TransferLearning.scala  transfer_learning.py
models/: .gitignore  README.md  build.sh  pom.xml
net/: GraphRunner.scala  TFTrainingHelper.scala  TFTrainingHelper2.scala  TorchCriterion.scala  TorchNet.scala
pipeline/: pom.xml
ppml/: README.md  build_docker_image.sh  generate-password.sh  install-graphene-driver.sh  pom.xml
python/: setup.py  version.txt
pyzoo/: setup.py
readthedocs/: index.rst  requirements-rtd.txt
scala/: make-dist.sh  pom.xml  scalastyle_config.xml
scala/dllib/src/main/java/com/intel/analytics/bigdl/dllib/api/net/native/: CMakeLists.txt
scripts/: README.md  analytics-zoo-base.sh  analytics-zoo-env.sh  get_bigdl_python  get_libtorch  get_nlp_architect  get_python_packages  jupyter-with-zoo-scala.sh  jupyter-with-zoo.sh  orca-clean.sh  orca-submit-client.sh  orca-submit-cluster.sh  orca_submit.sh  pyspark-shell-with-zoo.sh  pyspark-with-zoo.sh  python_package.sh  requirements.txt  spark-scala-with-zoo.sh  spark-shell-with-zoo.sh  spark-submit-python-with-zoo.sh  spark-submit-scala-with-zoo.sh  spark-submit-with-zoo.sh  zoo-build-info
spark/: pom.xml
spark-version/: pom.xml
transformers/: FeatureLabelTransformer.scala  FeatureToTupleAdapter.scala  ImageFeatureToTensor.scala  NumToTensor.scala  SampleToFeatureAdapter.scala  SeqToTensor.scala  TensorToSample.scala  (+1 more)
zoo/src/main/cpp/: CMakeLists.txt  CTensor.hpp  OpenVINOInferenceSupportive.cpp  OpenVINOInferenceSupportive.hpp  com_intel_analytics_zoo_pipeline_inference_OpenVinoInferenceSupportive.cpp  com_intel_analytics_zoo_pipeline_inference_OpenVinoInferenceSupportive.h
zoo/src/main/cpp/include/common/CTensor/: CTensor.hpp
(+7378 files in other folders)
